<resources>
    <string name="app_name">Mechanics Focus</string>
    <string name="business_name">Mechanics Focus</string>
    <string name="street_addr">123 Example Dr</string>
    <string name="city_addr">Durham, NC</string>
    <string name="mon_fri_hours">Mon-Fri 10am-8pm</string>
    <string name="sat_sun_hours">Sat-Sun 10am-9pm</string>
    <string name="phone_number">123-555-4321</string>
    <string name="email">m.focus@example.com</string>
    <string name="description">The shop with a focus on your vehicle\'s needs.\nFluid changes, tire
    changes, mechanical repairs up to full engine rebuilds - you name it, we can do it.</string>
</resources>
